Finish the header

--- a/index.html
+++ b/index.html
@@ -8,22 +8,27 @@
 </head>
 <body>
     <header>
-        <nav class="nav">
-            <a><img src="./images/fsociety-logo.png" width="60" alt="logo fsociety of mr robot series"></a>
-            <ul>
-                <li><a href="">Header link one</a></li>
-                <li><a href="">Header link two</a></li>
-                <li><a href="">Header link three</a></li>
-            </ul>
-        </nav>
-        <div class="header-content">
-            <div class="left-side">
-                <h2>This website is awesome</h2>
-                <p>This is a text for test Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde omnis earum laborum adonsequuntur laborum, quo explicabo sunt?</p>
-                <a href="" class="btn btn-full">Sign up</a>
-            </div>
-            <div class="right-side">
-                <img src="./images/mr_robot_cover.jpg" height="200" width="400" alt="">
+        <div class="header-container">
+            <nav>
+                <a><img src="./images/fsociety-logo.png" width="60" alt="logo fsociety of mr robot series"></a>
+                <ul>
+                    <li><a href="">Header link one</a></li>
+                    <li><a href="">Header link two</a></li>
+                    <li><a href="">Header link three</a></li>
+                </ul>
+            </nav>
+            <div class="header-content-container">
+                <div class="left-side">
+                    <p class="main-text">Landing Page. <br>Mr Robot</p>
+                    <p class="secondary-text">
+                        Mr. Robot is a psychological thriller about Elliot Alderson, a skilled but troubled hacker recruited by a mysterious anarchist to take down a powerful corporation. As he battles his own mind, he uncovers deep conspiracies that blur the line between reality and illusion.
+                    </p>
+                    <a href="" class="btn btn-full">Sign up</a>
+                </div>
+                <div class="right-side">
+                    <div class="image-cover-container">
+                    </div>
+                </div>
             </div>
         </div>
     </header>
