Finish call to action section

--- a/index.html
+++ b/index.html
@@ -71,8 +71,13 @@
 
         <section class="call-to-action-section">
             <div class="call-to-action-container">
-                <div class="left-side"></div>
-                <div class="right-side"></div>
+                <div class="left-side">
+                    <h4>Call to action ! It's time</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia praesentium magnam ratione</p>
+                </div>
+                <div class="right-side">
+                    <a href="" class="btn btn-outline">Sign up</a>
+                </div>
             </div>
         </section>
     </main>
